force-app/main/default/objects/smagicinteract__Consent__c/fields/doctor__c.field-meta.xml
<CustomField>
    <fullName>doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>consents</relationshipName>
    <type>Lookup</type>
</CustomField>