force-app/main/default/objects/smagicinteract__Consent__c/listViews/allSelection_Consent.listView-meta.xml
<ListView>
    <fullName>allSelection_Consent</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>