force-app/main/default/objects/smagicinteract__Consent__c/listViews/Nursing_Consent.listView-meta.xml
<ListView>
    <fullName>Nursing_Consent</fullName>
    <filterScope>Queue</filterScope>
    <label>Nursing</label>
    <queue>Nursing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>